--- a/src/component/common/header/Header.module.css
+++ b/src/component/common/header/Header.module.css
@@ -1,3 +1,9 @@
 .header {
-
+  color: #fff;
+  font-size: 2rem;
+  font-weight: 700;
+  height: 20vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
