feat: 인구피라미드와 연동할 대시보드 제작 완료

--- a/src/component/common/comments/NewsHeadline.module.css
+++ b/src/component/common/comments/NewsHeadline.module.css
@@ -7,3 +7,17 @@
   justify-content: space-around;
   align-items: center;
 }
+
+.question {
+  height: 100vh;
+  color: white;
+  font-size: 1.5rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.paragraph {
+  margin-bottom: 3rem;
+}
