--- a/src/pages/MainPage.module.css
+++ b/src/pages/MainPage.module.css
@@ -9,6 +9,6 @@
   flex: 1 1 auto;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: flex-start;
+  /* align-items: center; */
+  /* justify-content: flex-start; */
 }
