--- a/src/component/dashboard/Architecture/Box.module.css
+++ b/src/component/dashboard/Architecture/Box.module.css
@@ -5,19 +5,52 @@
 }
 
 .parent {
-  height: 3.5vw;
+  height: 2vw;
   /* display: flex; */
-  width: 3.5vw;
+  width: 2vw;
 }
 
+.container {
+  width: 25%;
+  color: white;
+  position: relative;
+}
+.container h4 {
+  text-align: center;
+  font-size: 1.2vw;
+  font-weight: 700;
+  margin-bottom: 0.5rem;
+  border: 1px solid lightgray;
+  padding: 0.3rem;
+}
+.container p {
+  text-align: center;
+  font-size: 1vw;
+  font-weight: 700;
+}
 .generator {
   display: flex;
   flex-wrap: wrap;
-  width: 25%;
+  /* width: 25%; */
+  width: 100%;
   gap: 0.5vw;
-  height: 100%;
+  /* height: 100%; */
+  align-items: flex-start;
 }
 
 .generator-container {
   display: flex;
+  justify-content: space-around;
+  /* align-items: flex-start; */
+}
+
+.tooltip {
+  background-color: white;
+  border-radius: 1rem;
+  min-width: 140px;
+  min-height: 70px;
+  padding: 1rem;
+  color: black;
+  position: absolute;
+  transform: translate(25%, -100%);
 }
