--- a/src/component/common/comments/AgingNews.module.css
+++ b/src/component/common/comments/AgingNews.module.css
@@ -1,5 +1,6 @@
 .section {
   height: 150vh;
+  min-width: 1000px;
   color: white;
   font-size: 1.55rem;
   display: flex;
@@ -23,12 +24,10 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 1.5rem;
+  padding: 3.5rem;
   /* justify-content: flex-start; */
 }
-.contents:nth-child(1) {
-  border-right: 0.5px solid lightgray;
-}
+
 .headline {
   text-align: center;
   font-weight: 700;
@@ -37,7 +36,7 @@
 .news {
   font-size: 1rem;
   line-height: 2rem;
-  min-height: 40vh;
+  min-height: 50vh;
 }
 
 .quote {
@@ -46,3 +45,5 @@
   font-size: 0.8rem;
   text-align: right;
 }
+
+
