--- a/src/component/common/comments/MarriedNews.module.css
+++ b/src/component/common/comments/MarriedNews.module.css
@@ -1,12 +1,13 @@
 .section {
   height: 100vh;
+  min-width: 1000px;
   color: white;
   font-size: 1.55rem;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
   align-items: center;
-  padding: 2rem;
+  padding: 5rem;
 }
 
 .contents {
