--- a/src/component/common/comments/PriceNews.module.css
+++ b/src/component/common/comments/PriceNews.module.css
@@ -1,5 +1,6 @@
 .section {
-  height: 100vh;
+  height: 150vh;
+  min-width: 1000px;
   color: white;
   font-size: 1.55rem;
   display: flex;
@@ -10,7 +11,7 @@
 
 .news-container {
   width: 100%;
-  height: 70vh;
+  height: 120vh;
   display: flex;
   /* gap: 1rem; */
   justify-content: space-between;
@@ -23,25 +24,25 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 1.5rem;
+  padding: 3.5rem;
   /* justify-content: flex-start; */
 }
-.contents:nth-child(1) {
-  border-right: 0.5px solid lightgray;
-}
+
 .headline {
   text-align: center;
   font-weight: 700;
   min-height: 8vh;
 }
 .news {
-  font-size: 1.2rem;
+  font-size: 1rem;
   line-height: 2rem;
   min-height: 50vh;
 }
 
 .quote {
+  margin-top: 1rem;
   width: 100%;
   font-size: 0.8rem;
   text-align: right;
 }
+
