--- a/src/component/dashboardContainer/Cartogram.module.css
+++ b/src/component/dashboardContainer/Cartogram.module.css
@@ -1,14 +1,26 @@
 .section {
   height: 100vh;
+  color: white;
 }
 .container {
-  display: inline-flex;
+  display: flex;
   flex-direction: column;
+  justify-content: space-around;
   position: relative;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   align-items: flex-start;
-  height: 70vh;
+  height: 90vh;
   width: 70vh;
 }
+
+.title {
+  width: 100%;
+  font-size: 1.2rem;
+  font-weight: 700;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
