--- a/src/component/dashboardContainer/EmptyHouseMap/EmptyHouse.module.css
+++ b/src/component/dashboardContainer/EmptyHouseMap/EmptyHouse.module.css
@@ -1,9 +1,10 @@
 .section {
-  height: 150vh;
+  height: 200vh;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 .content {
-  height: 100vh;
+  width: 70vw;
+  height: 150vh;
 }
